feat: Add comprehensive annotation-based SQS client with enhanced functionality
- Add annotation-based SQS client (@SqsClient) with method-level annotations
  - @SendMessage: Send single messages with optional attributes and group ID
  - @SendBatch: Send multiple messages efficiently
  - @ReceiveMessages: Receive and process messages with configurable polling
  - @StartPolling: Start background polling for message processing
  - @MessageProcessor: Mark methods as message processors

- Implement dynamic proxy pattern for SQS client generation
  - SqsClientProxyFactory: Create proxy instances for annotated interfaces
  - SqsClientInvocationHandler: Handle method invocations with SQS operations
  - Automatic queue name resolution and parameter mapping

- Add Jackson-based message serialization system
  - MessageSerializer interface with JacksonMessageSerializer implementation
  - Support for custom ObjectMapper configuration
  - Automatic serialization/deserialization for complex message types

- Enhance Spring Boot auto-configuration
  - SqsAnnotationClientConfiguration: Register annotation-based clients
  - SqsClientRegistrar: Scan and register @SqsClient interfaces
  - SqsClientFactoryBean: Create and configure SQS client beans

- Add comprehensive example implementations
  - OrderQueueService: E-commerce order processing example
  - NotificationService: Notification system example
  - SqsUsageExample: Complete usage demonstration

- Implement extensive test coverage
  - Integration tests with LocalStack
  - Performance and error handling tests
  - Annotation processing validation
  - Mock-based unit tests for all components

- Update existing SQS service implementation
  - Enhanced error handling and logging
  - Better integration with new annotation system
  - Improved configuration management

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>